# VulnPilot

VulnPilot/: LICENSE  README.md  langgraph.json  main.py  main_with_hint.py  pyproject.toml
VulnPilot/docker/: Dockerfile  docker-compose.yml
VulnPilot/scripts/: batch_vulhub_test.py  generate_phase_report.py
VulnPilot/tests/: _test_exploit_detector_fix.py  get_core.py  test_auditor.py  test_notebook.py  test_notebook_phase2.py  verify_auditor.py
VulnPilot/vulnpilot/: ablation_config.py  challenge_solver.py  common.py  config.py  graph.py  langmem_memory.py  model.py  notebook.py  prompts_book.py  retry_strategy.py  scheduler.py  state.py  task_launcher.py  task_manager.py  vulhub_manager.py
VulnPilot/vulnpilot/agents/: __init__.py  advisor.py  auditor_agent.py  docker_agent.py  intelligence_agent.py  main_agent.py  poc_agent.py
VulnPilot/vulnpilot/core/: __init__.py  constants.py  singleton.py
VulnPilot/vulnpilot/executor/: base.py  docker_native.py  docker_python_wrapper.py  factory.py  microsandbox.py
VulnPilot/vulnpilot/skills/: skill_loader.py
VulnPilot/vulnpilot/skills/auth-bypass/: SKILL.md
VulnPilot/vulnpilot/skills/file-inclusion/: SKILL.md
VulnPilot/vulnpilot/skills/oob/: SKILL.md
VulnPilot/vulnpilot/tools/: __init__.py  challenge_api_tools.py  exploit_tools.py  intelligence_tools.py  memory_tools.py  oob_tools.py  shell.py  shell_enhanced.py  vulhub_finish_tools.py  web_tools.py
VulnPilot/vulnpilot/utils/: __init__.py  exploitation_detector.py  failure_detector.py  flag_validator.py  rate_limiter.py  recon.py  util.py
(+15 files in other folders)
